# ultimate-rvc

./: .pre-commit-config.yaml  .yamllint.yaml  Aisingers  README.md  pyproject.toml
notebooks/: ultimate_rvc_colab_ru.ipynb
notes/: TODO.md
src/ultimate_rvc/: typing_extra.py
src/ultimate_rvc/cli/: common.py
src/ultimate_rvc/cli/generate/: main.py  song_cover.py  speech.py
src/ultimate_rvc/cli/train/: main.py
src/ultimate_rvc/core/: exceptions.py
src/ultimate_rvc/core/generate/: common.py  song_cover.py  speech.py  typing_extra.py
src/ultimate_rvc/core/manage/: custom_pretrains.json  models.py  typing_extra.py
src/ultimate_rvc/core/train/: extract.py  prepare.py  train.py  typing_extra.py
src/ultimate_rvc/rvc/configs/: config.py
src/ultimate_rvc/rvc/infer/: infer.py  pipeline.py
src/ultimate_rvc/rvc/lib/: utils.py
src/ultimate_rvc/rvc/lib/algorithm/: discriminators.py  residuals.py  synthesizers.py
src/ultimate_rvc/rvc/lib/algorithm/generators/: hifigan.py  hifigan_mrf.py  hifigan_nsf.py  refinegan.py
src/ultimate_rvc/rvc/lib/predictors/: F0Extractor.py  FCPE.py  RMVPE.py  f0.py
src/ultimate_rvc/rvc/lib/tools/: gdown.py  model_download.py  prerequisites_download.py  pretrained_selector.py  tts.py
src/ultimate_rvc/rvc/realtime/: audio.py  callbacks.py  client.py  core.py  pipeline.py
src/ultimate_rvc/rvc/realtime/utils/: vad.py
src/ultimate_rvc/rvc/train/: anyprecision_optimizer.py  data_utils.py  losses.py  mel_processing.py  train.py  utils.py
src/ultimate_rvc/rvc/train/extract/: extract.py  preparing_files.py
src/ultimate_rvc/rvc/train/models/reference/: create_reference.py
src/ultimate_rvc/rvc/train/preprocess/: preprocess.py
src/ultimate_rvc/rvc/train/process/: change_info.py  extract_index.py  extract_model.py  model_blender.py
src/ultimate_rvc/web/: main.py
src/ultimate_rvc/web/config/: component.py  main.py  tab.py
src/ultimate_rvc/web/tabs/generate/song_cover/: multi_step_generation.py  one_click_generation.py
src/ultimate_rvc/web/tabs/generate/speech/: multi_step_generation.py  one_click_generation.py
src/ultimate_rvc/web/tabs/manage/: audio.py  models.py  settings.py
src/ultimate_rvc/web/tabs/train/: multi_step_generation.py
tests/unit/core/: test_exceptions.py
